syntax = "proto2";
package Konata.Core.Packets.Protobuf.Msf;

message obj_msg {
  message MsgContentInfo {  
    optional bytes ContentInfoId = 1;
    optional MsgFile file = 2;

    message MsgFile {    
      optional uint32 busId = 1;
      optional bytes filePath = 2;
      optional uint64 fileSize = 3;
      optional string fileName = 4;
      optional int64 deadTime = 5;
      optional bytes fileSha1 = 6;
      optional bytes ext = 7;
      optional bytes fileMd5 = 8;
    }
  }

  message MsgPic {  
    optional bytes smallPicUrl = 1;
    optional bytes originalPicUrl = 2;
    optional uint32 localPicId = 3;
  }

  message ObjMsg {  
    optional uint32 msgType = 1;
    optional bytes title = 2;
    repeated bytes abstract = 3;
    optional bytes titleExt = 5;
    repeated MsgPic pic = 6;
    repeated MsgContentInfo contentInfo = 7;
    optional uint32 reportIdShow = 8;
  }
}

